feature/initial, fixed typos, added toString for loginbuddyResponse